fix up footer on mobile

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -6,6 +6,14 @@ footer {
     justify-content: space-evenly;
     align-items: center;
 
+    @media (max-width: $desktopMinimum) {
+        padding-top: 0.2em;
+        flex-direction: column;
+        justify-content: start;
+        align-items: stretch;
+        text-align: center;
+    }
+
     width: 100%;
     background-color: $dope;
     color: $brown;
@@ -19,8 +27,15 @@ footer {
     justify-content: space-between;
     align-items: center;
 
-    flex-basis: 25em;
-    padding-left: 0;
+    @media (min-width: $desktopMinimum) {
+        flex-basis: 25em;
+        padding-left: 0;
+    }
+
+    @media (max-width: $desktopMinimum) {
+        margin: 0.2em;
+        padding: 0 1em;
+    }
 
     list-style: none;
     a { color: $brown; }
